# myenigma

./: Dockerfile  LICENSE  README.md  README_zh.md  requirements.txt  setup.cfg
.github/workflows/: python-package.yml  python-publish.yml  web_demo_build.yml
src/enigma/: enigma.py
src/enigma/part/: plugboard.py
src/enigma/part/plate/: entry_plate.py  plate.py  reflector.py  rotor.py
src/enigma/sample_plate/: reflector.py  rotor.py
src/myenigma/: __init__.py  enigma.py
src/myenigma/part/: __init__.py  plugboard.py
src/myenigma/part/plate/: __init__.py  entry_plate.py  plate.py  reflector.py  rotor.py
src/myenigma/sample_plate/: __init__.py  reflector.py  rotor.py
tests/: test_enigma.py  test_enigma_plug.py  test_plate.py
web_demo/: web_demo.py
