[metadata]
name = enigma
version = 1.0.0
author = DingJunyao
author_email = dingjunyao0703@163.com
description = Python-based Enigma.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/DingJunyao/enigma
project_urls =
    Source = https://github.com/DingJunyao/enigma
    Bug Tracker = https://github.com/DingJunyao/enigma/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Topic :: Security :: Cryptography
    Topic :: Sociology :: History
    Topic :: Education
    Topic :: Utilities
[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src