[metadata]
name = myenigma
version = 2.0.0
author = DingJunyao
author_email = dingjunyao0703@163.com
description = Python-based Enigma.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/DingJunyao/myenigma
project_urls =
    Source = https://github.com/DingJunyao/myenigma
    Bug Tracker = https://github.com/DingJunyao/myenigma/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Topic :: Security :: Cryptography
    Topic :: Sociology :: History
    Topic :: Education
    Topic :: Utilities
[options]
package_dir =
    = src
packages = find:
python_requires = >=3.10

[options.packages.find]
where = src